--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "exercises/learning-lm-rs"]
 	path = exercises/learning-lm-rs
 	url = https://github.com/wawahejun/learning-lm-rs
+[submodule "exercises/rustlings"]
+	path = exercises/rustlings
+	url = https://github.com/wawahejun/rustlings-completed-version
