--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,5 @@
 [workspace]
-members = ["environment", "course", "xtask"]
+members = ["environment", "course","xtask"]
+exclude = ["exercises"]
 resolver = "3"
 package.edition = "2024"
